2004-02-11  Andras Varga 

	* csimul.h, cscheduler.h: semantic change in getNextEvent()'s and
	selectNextModule()'s return value: NULL now means that the scheduler
	got interrupted by the user while it was waiting (typically with parsim
	or real-time sim).

2004-02-09  Andras Varga 

	* cexception.h: added storage of module class name (NED type name)

2004-02-09  Andras Varga 

	* ctypes.h: added methods to cModuleInterface so that it's possible
	to dynamically assemble it (needed by networkbuilder)

2004-02-07  Andras Varga 

	* ctypes.h: added createOneIfClassIsKnown(const char *classname) 
	function

2004-02-06  Andras Varga

	* cgate.h: added cGate::disconnect(); revised cGate::connectTo()

	* cchannel.h: added setDelay(double), setError(double), 
	setDatarate(double) to cSimpleChannel

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-09  Andras Varga

	* cenvir.h: added bubble() to cEnvir

	* cenvir.h: added overloaded "<<" operator for printing object pointers
	and references (cObject*, const cObject*, cObject&, const cObject&).
	It prints the class name and the full name, like "(cMessage)hello".

2004-01-06  Andras Varga

	* cenvir.h: added isGUI()

	* display string manipulation made a lot easier: displayString() now
	returns a cDisplayString which can be changed with its own member
	functions: insertTag(), setTagArg(), removeTag(), etc.
	Example: coloring the icon: displayString().setTagArg("i",1,"cyan").
	setDisplayString() got deprecated -- there's really no need for it
	any more.

	* cGate became 8 bytes (2 pointers) smaller: notify_inspector and
	data_for_inspector members got eliminated (notification is now
	in the cDisplayString class). Same for cModule.

	* cenvir.h: new notification methods: moduleCreated(),
	moduleDeleted(), connectionCreated(), connectionRemoved(),
	displayStringChanged(cGate*), displayStringChanged(cModule*),
	displayStringAsParentChanged()

	* backwards compatibility stuff collected in compat.h
